fix icon set rendering information creation, fdo#58610

Change-Id: Iad5dec601b54893ed809ab908671698919779ddb